--- a/server/templates/problems.html
+++ b/server/templates/problems.html
@@ -13,6 +13,7 @@
                 <tr>
                     <th>id</th>
                     <th>Title</th>
+                    <th>Source</th>
                     {% if is_admin %}
                     <th>Modify</th>
                     {% endif %}
@@ -24,6 +25,7 @@
                     <tr>
                         <th scope="row">{{p.id}}</th>
                         <td><a href="{{url_for('oj.problem', pid=p.id)}}"><strong>{{p.title}}</strong></a></td>
+                        <th>{{p.source}}</th>
                         {% if is_admin %}
                         <td>
                             <a href="{{url_for('admin.edit_problem', pid=p.id)}}">Edit</a>
