--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -21,7 +21,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" href="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -87,5 +87,7 @@
         <a href="mailto:leasunhy@gmail.com" class="black">leasunhy</a>
     </p>
 </div>
+  <script src="{{url_for('static', filename='js/bootstrap-modal.js')}}">
+  </script>
 {% endblock %}
 
