--- a/server/templates/show_contest.html
+++ b/server/templates/show_contest.html
@@ -12,7 +12,9 @@
             <ul id="show_contest_tabs" class="nav nav-justified nav-pills">
                 <li class="active"><a href="#basic" data-toggle="tab"> Basic Info </a></li>
                 <li><a href="#problems" data-toggle="tab"> Problems </a></li>
+                {% if is_admin %}
                 <li><a href="#standing" data-toggle="tab"> Standing </a></li>
+                {% endif %}
                 <!--li><a href="#practice" data-toggle="tab"> Practice </a></li-->
             </ul>
         </div>
@@ -45,13 +47,13 @@
                 </tbody>
             </table>
         </div>
+        {% if is_admin %}
         <div class="tab-pane fade" id="standing">
             <table class="table">
                 <thead>
                     <tr>
                         <th>User</th>
-                        <th>Solved</th>
-                        <th>penalty</th>
+                        <th>Score</th>
                         {% for p in c.problems %}
                         <th>{{loop.index}}</th>
                         {% endfor %}
@@ -62,23 +64,15 @@
                     <tr>
                         <td> {{ item[0].display_name }} </td>
                         <td> {{ item[1] }} </td>
-                        <td> {{ item[2] }} </td>
-                        {% for (actime, penalty, tries) in item[3] %}
-                        {% if actime %}
-                        <td class="td-ac"> {{actime}}{{'(%d)' % tries if tries}}</td>
-                        {% else %}
-                            <td class="td-no-ac">
-                                {% if tries %}
-                                ({{tries}})
-                                {% endif %}
-                            </td>
-                        {% endif %}
+                        {% for (score,score2) in item[2] %}
+                        <td> {{score or 0}}({{score2 or 0}}) </td>
                         {% endfor %}
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
         </div>
+        {% endif %}
         <!--div class="tab-pane fade" id="practice">
             Practice
         </div-->
